# PIA

./: pyproject.toml
src/PIA/: color.py
src/PIA/cmd/: clf.py  cmp.py  fig.py  idn.py  nrm.py  ref.py  wrp.py
src/PIA/stats/: __init__.py  cluster.f90  cluster.pyf
